# rangeseeker-app

./: .gitignore  README.md
.github/workflows/: api-deploy.yml  app-deploy.yml
api/: Dockerfile  application.py  makefile  pyproject.toml  worker.py
api/alembic/: create-migration.sh  env.py  run-migrations.sh
api/alembic/versions/: 2025_11_21_2350-c90c522fd7f7_create_users_and_user_wallets_tables.py  2025_11_22_0901-f163836ddab6_create_strategies_table.py  2025_11_22_1324-5dab280981c2_create_agents_and_agent_wallets_tables.py
api/rangeseeker/: amp_client.py  app_manager.py  constants.py  create_app_manager.py  create_user_manager.py  erc_abis.py  gemini_llm.py  model.py  strategy_manager.py  strategy_parser.py  uniswap_abis.py  uniswap_data_client.py  user_manager.py
api/rangeseeker/api/: authorizer.py  v1_api.py  v1_endpoints.py  v1_resources.py
api/rangeseeker/store/: entity_repository.py  schema.py
api/scripts/: export_eoa_simple.py  rebalance_out_of_range.py  test_amp.py  test_pool_data.py  test_position_query.py  test_strategy_feeds.py  test_wallet_positions.py  trigger_rebalance.py
app/: Dockerfile  config.build.js  index.html  makefile  package-lock.json  package.json
app/public/.well-known/: farcaster-local.json  farcaster-remote.json
app/src/: App.tsx  AuthContext.tsx  GlobalsContext.tsx  StrategyCreationContext.tsx  index.tsx  theme.ts
app/src/client/: client.ts  endpoints.ts  resources.ts
app/src/components/: AnimatedBackground.tsx  ContainingView.tsx  GlassCard.tsx  GlowButton.tsx  LoadingShimmer.tsx  MockChart.tsx  PriceChart.tsx
(+14 files in other folders)
