[project]
name = "rangeseeker-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "kiba-core[core-api,database-psql,queue-sqs,requester,storage,web3]==0.5.3.dev42",
    "alembic>=1.13.0",
]

[dependency-groups]
dev = [
    "kiba-core[types]==0.5.3.dev42",
    "kiba-build==0.1.11.dev9",
    "tabulate>=0.9.0",
    "devtools>=0.12.2",
]
